# scale.rb

./: .dockerignore  .gitignore  2  Cargo.toml  Dockerfile  Gemfile  LICENSE.txt  Makefile  README.md  Rakefile  scale.gemspec
exe/: scale
lib/: address.rb  common.rb  default.json  helper.rb  scale.rb  scale_bytes.rb  substrate_client.rb  tmp.rb  type_builder.rb  type_registry.rb  types_loader.rb
lib/metadata/: metadata.rb  metadata_v0.rb  metadata_v1.rb  metadata_v10.rb  metadata_v11.rb  metadata_v12.rb  metadata_v13.rb  metadata_v2.rb  metadata_v3.rb  metadata_v4.rb  metadata_v5.rb  metadata_v6.rb  metadata_v7.rb  metadata_v8.rb  metadata_v9.rb
lib/scale/: base.rb  block.rb  bool.rb  codec.rb  compact_integers.rb  enums.rb  fixed_width_integers.rb  options.rb  primitive.rb  structs.rb  trie.rb  type_builder.rb  types.rb  vectors.rb  version.rb
lib/type_registry/: certifybook-chain.json  crab-28.json  crab.json  darwinia.json  default.json  pangolin.json
scripts/: block_events.rb  example.rb  mmr_root_to_sign.rb
spec/: dynamic_types.rb  dynamic_types_from_json_spec.rb  encode_spec.rb  event_record_spec.rb  extrinsic_spec.rb  ffi_helper.rb  ffi_spec.rb  low_level_spec.rb  metadata_spec.rb  primitive_spec.rb  storage_key_spec.rb  substrate_client_spec.rb  trie_node_spec.rb  type_builder_spec.rb  type_list_spec.rb  types.rb  types2_spec.rb  types_ffi_spec.rb  types_for_test.rb  types_spec.rb  v3  v4
spec/metadata/v0/: data  decoded.json  expect.json
spec/metadata/v1/: hex
spec/metadata/v11/: hex  (+1 more)
spec/metas/: v3  v4
src/: lib.rs  storage_key.rs
(+8 files in other folders)
