[package]
name = "SCALE-testing-interface"
version = "0.1.0"
authors = ["Robert Hambrock <robert@web3.foundation>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "1.3.6" }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", features = ["full_crypto"]}
frame-support = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git" }

[lib]
name = "scale_ffi"
crate-type = ["dylib"]

[[bin]]
name = "storage_key"
path = "src/storage_key.rs"
